--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Etienne Marais",
-            "email": "hello@etiennemarais.co.za",
-            "homepage": "https://etiennemarais.github.io/",
+            "name": "Brian Logan",
+            "email": "logan@collingmedia.com",
+            "homepage": "https://collingmedia.com/",
             "role": "Developer"
         }
     ],
