--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "illuminate/notifications": "^5.3@dev",
-        "illuminate/support": "^5.3@dev",
-        "illuminate/events": "^5.3@dev",
+        "illuminate/notifications": "^5.3",
+        "illuminate/support": "^5.3",
+        "illuminate/events": "^5.3",
         "colling-media/zipwhip-php-api": "*"
     },
     "require-dev": {
@@ -38,6 +38,5 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
-    },
-    "minimum-stability": "dev"
+    }
 }
